# rehab_scheduler

./: CLAUDE.md  GUIDE.md  README.md  baseline_agent.py  baseline_results.json  case_generator.py  client.py  context.md  models.py  openenv.yaml  prd.md  prompt.md  pyproject.toml  run1.txt  skill.md
.github/workflows/: validate.yml
server/: Dockerfile  app.py  rehab_environment.py  requirements.txt
tests/: manual_test.http  test_baseline_agent.py  test_endpoints.py  test_grader.py  test_reproducibility.py
